--- a/extra/tests/notebook/SimpleAccelerometer.ipynb
+++ b/extra/tests/notebook/SimpleAccelerometer.ipynb
@@ -85,6 +85,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This gives us a list of the connected board in machine-friendly JSON format. We can then select the connected Nano 33 BLE board. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_list = ''.join(data_string)\n",
+    "data_json = json.loads(data_list)\n",
+    "\n",
+    "# Extract the COM port for the Nano 33 BLE\n",
+    "for item in data_json:\n",
+    "    if 'matching_boards' in item:\n",
+    "        print(\"COM Port for Nano 33 BLE:\", item['port']['address'])\n",
+    "        niclaSenseMEPort = item['port']['address']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We will define a class `TestSerialCommunication` that will for a given test data evaluate if the output is correct. This performs two tasks:\n",
     "- Checks to see if the serial port is established\n",
     "- Checks the data recieved\n",
